fix: fix wrong text overflow handling

--- a/app/less/posting.less
+++ b/app/less/posting.less
@@ -2,6 +2,7 @@
 	font-family: var(--font-content);
 	font-size: 1.1rem;
 	letter-spacing: -0.0075em;
+	overflow-wrap: break-word;
 
 	h1, h2, h3,
 	h4, h5, h6 {
